--- a/template.tex
+++ b/template.tex
@@ -27,8 +27,8 @@
 %\title[title for header]{title}
 %\titlenote{}
 \authorlist{
-\authorentry[igarashi@sasase.ics.keio.ac.jp]{Kosuke Igarashi}{s}{keio}\MembershipNumber{}
-\authorentry[kato@sasase.ics.keio.ac.jp]{Hiroya Kato}{m}{keio}\MembershipNumber{1722956}
+\authorentry[igarashi@sasase.ics.keio.ac.jp]{Kosuke Igarashi}{n}{keio}\MembershipNumber{}
+\authorentry[kato@sasase.ics.keio.ac.jp]{Hiroya Kato}{s}{keio}\MembershipNumber{1722956}
 \authorentry[sasase@ics.keio.ac.jp]{Iwao Sasase}{f}{keio}\MembershipNumber{7908862} % keio はラベル
 }
 \affiliate[keio]{Dept. of Information and Computer Science, Keio University\\ 3-14-1 Hiyoshi, Kohoku, Yokohama, Kanagawa 223-8522, Japan}
